--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
       - run:
           name: Install dependencies
           command: |
-            curl https://raw.githubusercontent.com/golang/dep/master/install.sh | sh
+            go get -u github.com/golang/dep/cmd/dep
             make deps
 
       - run:
