--- a/api/infrastructure/bigtable/testdata/articles.yaml
+++ b/api/infrastructure/bigtable/testdata/articles.yaml
@@ -17,3 +17,8 @@ column_families:
         rows:
           title: homuhomu_title
           content: homuhomu_content
+      - key: 3##1
+        version: 2018-01-01 00:00:00 +00:00
+        rows:
+          title: 1
+          content: 2.0
