--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
       - image: google/cloud-sdk
         command: gcloud beta emulators bigtable start --host-port 0.0.0.0:8864 --project test-project
 
-    working_directory: $HOME/github.com/takashabe/btcli
+    working_directory: ~/github.com/takashabe/btcli
 
     steps:
       - checkout
